<resources>
    <string name="app_name">MeetMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1312002118879594</string>
    <string name="app_logo">App Logo</string>
    <string name="meet_new_people_family_and_friends">Meet new People, Family &amp; Friends</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="btn_text_login_fb">Login with Facebook</string>
    <string name="remember_me">Remember Me</string>
    <string name="please_wait">Please wait…</string>
    <string name="one_or_more_fields_empty">One or more fields are empty. Please fill all fields</string>
    <string name="login_aborted">LogIn Aborted</string>
    <string name="weak_password_message">Password cannot be less than 6 chars</string>

</resources>
